Don't lose target position affinity in mouse drag

When handling a mouse drag, if the result selection remains a caret, we
should preserve the text affinity to ensure that the caret shows up in
the correct line. This patch makes the implementation follow that.

Bug: 919146
Change-Id: I12b40818acfc96fe1aa871cbeb40b6f45ac8a048
Reviewed-on: https://chromium-review.googlesource.com/c/1396438
Commit-Queue: Xiaocheng Hu <xiaochengh@chromium.org>
Reviewed-by: Yoshifumi Inoue <yosin@chromium.org>
Reviewed-by: Yoichi Osato <yoichio@chromium.org>
Cr-Commit-Position: refs/heads/master@{#620930}
Former-commit-id: 9c1ee116579e4a3f36ddc93bc258cfce98d5fa9a